--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-simple-typewriter": "^5.0.1",
     "sass": "^1.57.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "typewriter-effect": "^2.19.0"
   }
 }
